[package]
name = "benchtest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
lazy_static = "1.4.0"
base64 = "0.13"
image = "0.23.14"
criterion = "0.3.4"
rand = "0.6.1"
structopt = "0.3.21"
json = "0.12.4"
byteorder ="1.4.3"
bytes ="1.0.1"

[profile.release]
lto = "thin"

[build]
rustflags = ["-C", "linker-arg=-fuse-ld=gold"]

